--- a/.config/evolution/addressbook/state.ini
+++ b/.config/evolution/addressbook/state.ini
@@ -1,7 +1,7 @@
 [Search Bar]
 SearchOption=contact-search-name-contains
 SearchFilter=contact-filter-any-category
-SearchText=stefan
+SearchText=suraya
 
 [SourceSelector]
 Address Book-hidden-groups=local-stub;
