--- a/.config/evolution/mail/state.ini
+++ b/.config/evolution/mail/state.ini
@@ -5,7 +5,7 @@ SearchOption=mail-search-subject-or-addresses-contain
 Expanded=true
 
 [Folder Tree]
-Selected=folder://3ee3eef542d90f4605087ef14fa3f6d75eb6a353/INBOX
+Selected=folder://c5c8a6b511f067bef6738c60460807ddf44446be/INBOX
 
 [Folder folder://local/Inbox]
 GroupByThreads=true
@@ -20,7 +20,7 @@ Expanded=true
 
 [Folder folder://3ee3eef542d90f4605087ef14fa3f6d75eb6a353/INBOX]
 PreviewVisible=true
-SelectedMessage=1286
+SelectedMessage=1360
 GroupByThreads=true
 
 [Folder folder://3ee3eef542d90f4605087ef14fa3f6d75eb6a353/%5bGmail%5d]
@@ -37,7 +37,7 @@ Expanded=true
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/INBOX]
 GroupByThreads=true
 PreviewVisible=true
-SelectedMessage=2210
+SelectedMessage=2340
 
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/%5bGmail%5d]
 Expanded=true
@@ -48,7 +48,8 @@ SelectedMessage=1017
 
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/%5bGmail%5d/Sent%20Mail]
 PreviewVisible=true
-SelectedMessage=145
+SelectedMessage=146
+GroupByThreads=true
 
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/%5bGmail%5d/Spam]
 PreviewVisible=true
@@ -56,7 +57,7 @@ SelectedMessage=9
 
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/%5bGmail%5d/All%20Mail]
 PreviewVisible=true
-SelectedMessage=737
+SelectedMessage=2753
 
 [Folder folder://c5c8a6b511f067bef6738c60460807ddf44446be/%5bGmail%5d/Starred]
 PreviewVisible=true
